# burnbag

./: .env.example  README.md  pyproject.toml
app/: config.py  db.py  main.py
static/: index.css  index.html
static/js/: crypto.js  log.js  state.js  ui.js  upload.js
